Update the last of https://github.com/JetBrains/jediterm